# tutorials

./: .gitignore  Dockerfile  README.md
.circleci/: Dockerfile  config.yml
.github/: CODEOWNERS  settings.yml
ballot/: README.md
ballot/app/: .eslintrc.js  package-lock.json  package.json
ballot/app/scripts/: deploy_service.js
ballot/app/service-clients/: ballot.js  ballot.ts
ballot/app/src/: App.vue  config.js  main.js  router.js  store.js  variables.scss
ballot/app/test/: service.spec.ts
ballot/application/: package.json
ballot/application/public/: index.html
ballot/application/src/: router.js  store.js
ballot/service/: Cargo.toml
ballot/service/src/: main.rs
dice-game/: .gitignore  README.md  package.json
dice-game/app/: .eslintrc.js  package-lock.json  package.json
dice-game/app/scripts/: deploy_service.js
dice-game/app/service-clients/: dice-game.ts
dice-game/app/src/: main.ts
dice-game/app/test/: dice-game.spec.ts  (+1 more)
dice-game/service/: Cargo.toml
dice-game/service/src/: main.rs
erc20/app/: package.json
hello-world/: README.md  config.js  package.json  tsconfig.json
hello-world/app/: package.json  tsconfig.json
hello-world/service/: Cargo.toml
hello-world/service/src/: main.rs
hello-world/src/: main.rs
message-board/: README.md
message-board/app/: package.json
message-board/service/: Cargo.toml
messaging/app/: package-lock.json  package.json
rock-paper-scissors/: Cargo.toml  README.md  package.json
rock-paper-scissors/app/: package.json  tsconfig.json
rock-paper-scissors/service/: Cargo.toml
(+28 files in other folders)
