[package]
name = "dice_game"
version = "0.1.0"
authors = ["Oasis Labs feedback@oasislabs.com"]
edition = "2018"

[dependencies]
map_vec = { version = "0.2", features = ["serde"]}
oasis-std = "0.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.6.5"

[dev-dependencies]
oasis-test = "0.2"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
