[package]
name = "oasis-dice-game"
version = "0.1.0"
authors = ["Oasis Labs feedback@oasislabs.com"]
edition = "2018"
publish = false

[dependencies]
map_vec = "0.3"
oasis-std = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
oasis-test = "0.2"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
