[package]
name = "hello-world"
version = "0.1.0"
authors = ["Oasis Labs <feedback@oasislabs.com>"]
edition = "2018"

[dependencies]
map_vec = "0.2"
oasis-std = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
oasis-test = "0.2"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
